--- a/ChattingPractice/ChattingPractice-Info.plist
+++ b/ChattingPractice/ChattingPractice-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.uangel.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.uangel.testapns</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
